2006-05-05  Erik Sandberg  <mandolaerik@gmail.com>
	* lily/context.cc, lily/global-context.cc: Added 'unique' member,
	used by music streams.

	* lily/dispatcher.cc, lily/dispatcher-scheme.cc,
	lily/stream-event.cc, lily/stream-event-scheme.cc,
	lily/listener.cc, lily/scheme-listener.cc,
	lily/scheme-listener-scheme.cc, lily/include/dispatcher.hh,
	lily/include/stream-event.hh, lily/include/listener.hh,
	lily/include/scheme-listener.hh, scm/define-event-classes.scm:
	Created data structures for music streams.
	
2006-05-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/beam.cc (get_beam_segments): new function. Reorganise the
	construction of a beam. 
	(print): rewrite. 

	* flower/include/std-vector.hh (default_compare): use only one comparison.

	* scm/define-markup-commands.scm (note-by-number): remove debug display.
	(note-by-number): further attachment fixes.

	* scm/lily-library.scm (ordered-cons): new function.
	(interval-index): new function

	* lily/note-head-scheme.cc (LY_DEFINE): new file.

	* lily/note-head.cc (get_stem_attachment): new function.

	* scm/define-markup-commands.scm (note-by-number): read 'style
	property. 

	* input/regression/markup-note.ly: show note-head style option.

	* mf/feta-bolletjes.mf (overdone_heads): fix attachment points for
	triangle head.

2006-05-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/GNUmakefile (NCSB_OTFS): remove old ncsb detection further.

	* configure.in (LINK_GXX_STATICALLY): fix for ncsb detection.

	* lily/include/constrained-breaking.hh: GCC 4 fix.

2006-05-04  Joe Neeman  <joeneeman@gmail.com>

	* lily/simple-spacer.cc: Remove class Simple_spacer_wrapper.
	Replace it with functions get_line_forces and get_line_configuration.
	(class Simple_spacer): Make data private.
	Rewrite compression algorithm to be faster and simpler.

	* lily/simple-spacer-scheme.cc (ly_solve_rod_and_spring_problem):
	* lily/gourlay-breaking.cc (solve):
	* lily/constrained_breaking.cc (space_line):