@@ -106,6 +106,8 @@ similar to chord syntax")
   (let* ((file-name (%search-load-path x)))
     (if (ly:get-option 'verbose)
 	(ly:progress "[~A" file-name))
+    (if (not file-name)
+	(ly:error (_ "Can't find ~A" x)))
     (primitive-load file-name)
     (if (ly:get-option 'verbose)
 	(ly:progress "]"))))
@@ -223,7 +225,7 @@ The syntax is the same as `define*-public'."
 	  ;; load-from-path
 	  '("lily-library.scm"
 	    "file-cache.scm"
-	    "define-event-classes.scm"
+;	    "define-event-classes.scm"
 	    "define-music-types.scm"
 	    "output-lib.scm"
 	    "c++.scm"
